Projectile spawning angle fixed
Changes:
- Projectile now follows the supposed angle
- Added projectile lifetime config